--- a/configs/fabric/leaf3.cfg
+++ b/configs/fabric/leaf3.cfg
@@ -110,3 +110,57 @@ set / system logging remote-server 172.80.80.45
 set / system logging remote-server 172.80.80.45 transport udp
 set / system logging remote-server 172.80.80.45 remote-port 1514
 set / system logging remote-server 172.80.80.45 facility local6 priority match-above informational
+
+# Downlink vlan 10
+set / interface ethernet-1/1 subinterface 10 type bridged
+set / interface ethernet-1/1 subinterface 10 description bd1
+set / interface ethernet-1/1 subinterface 10 admin-state enable
+set / interface ethernet-1/1 subinterface 10 vlan encap single-tagged vlan-id 10
+
+# tunnel interface
+set / tunnel-interface vxlan0 vxlan-interface 1 type bridged
+set / tunnel-interface vxlan0 vxlan-interface 1 ingress vni 1
+set / tunnel-interface vxlan0 vxlan-interface 1 egress source-ip use-system-ipv4-address
+
+# mac vrf
+set / network-instance mac-vrf-1
+set / network-instance mac-vrf-1 type mac-vrf
+set / network-instance mac-vrf-1 admin-state enable
+set / network-instance mac-vrf-1 interface ethernet-1/1.10
+set / network-instance mac-vrf-1 vxlan-interface vxlan0.1
+set / network-instance mac-vrf-1 protocols
+set / network-instance mac-vrf-1 protocols bgp-evpn
+set / network-instance mac-vrf-1 protocols bgp-evpn bgp-instance 1
+set / network-instance mac-vrf-1 protocols bgp-evpn bgp-instance 1 vxlan-interface vxlan0.1
+set / network-instance mac-vrf-1 protocols bgp-evpn bgp-instance 1 evi 1
+set / network-instance mac-vrf-1 protocols bgp-evpn bgp-instance 1 ecmp 8
+set / network-instance mac-vrf-1 protocols bgp-vpn
+set / network-instance mac-vrf-1 protocols bgp-vpn bgp-instance 1
+set / network-instance mac-vrf-1 protocols bgp-vpn bgp-instance 1 route-target
+set / network-instance mac-vrf-1 protocols bgp-vpn bgp-instance 1 route-target export-rt target:100:1
+set / network-instance mac-vrf-1 protocols bgp-vpn bgp-instance 1 route-target import-rt target:100:1
+
+# Downlink vlan 13
+set / interface ethernet-1/1 subinterface 13 type routed
+set / interface ethernet-1/1 subinterface 13 admin-state enable
+set / interface ethernet-1/1 subinterface 13 ipv4 admin-state enable
+set / interface ethernet-1/1 subinterface 13 ipv4 address 10.3.3.254/24
+set / interface ethernet-1/1 subinterface 13 vlan encap single-tagged vlan-id 13
+
+# tunnel interface (unchanged)
+set / tunnel-interface vxlan0 vxlan-interface 2 type routed
+set / tunnel-interface vxlan0 vxlan-interface 2 ingress vni 2
+set / tunnel-interface vxlan0 vxlan-interface 2 egress source-ip use-system-ipv4-address
+
+# ip vrf
+set / network-instance ip-vrf1 type ip-vrf
+set / network-instance ip-vrf1 admin-state enable
+set / network-instance ip-vrf1 description ip-vrf1
+set / network-instance ip-vrf1 interface ethernet-1/1.13
+set / network-instance ip-vrf1 vxlan-interface vxlan0.2
+set / network-instance ip-vrf1 protocols bgp-evpn bgp-instance 1 vxlan-interface vxlan0.2
+set / network-instance ip-vrf1 protocols bgp-evpn bgp-instance 1 evi 2
+set / network-instance ip-vrf1 protocols bgp-evpn bgp-instance 1 ecmp 8
+set / network-instance ip-vrf1 protocols bgp-evpn bgp-instance 1 routes route-table mac-ip advertise-gateway-mac true
+set / network-instance ip-vrf1 protocols bgp-vpn bgp-instance 1 route-target export-rt target:101:1
+set / network-instance ip-vrf1 protocols bgp-vpn bgp-instance 1 route-target import-rt target:101:1
